--- a/polls/templates/polls/results.html
+++ b/polls/templates/polls/results.html
@@ -1,9 +1,12 @@
-<h1>{{ question.question_text }}</h1>
+<h1>{{ poll.title }}</h1>
 
 <ul>
+{% for question in poll.question_set.all %}
+<h2>{{ question.question_text }}</h2>
 {% for choice in question.choice_set.all %}
     <li>{{ choice.choice_text }} -- {{ choice.votes }} vote{{ choice.votes|pluralize }}</li>
 {% endfor %}
+{% endfor %}
 </ul>
 
-<a href="{% url 'polls:detail' question.id %}">Vote again?</a>
+<a href="{% url 'polls:detail' poll.id %}">Vote again?</a>
