--- a/polls/templates/polls/results.html
+++ b/polls/templates/polls/results.html
@@ -1,5 +1,7 @@
 <h1>{{ poll.title }}</h1>
 
+{% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
+
 <ul>
 {% for question in poll.question_set.all %}
 <h2>{{ question.question_text }}</h2>
@@ -9,4 +11,4 @@
 {% endfor %}
 </ul>
 
-<a href="{% url 'polls:detail' poll.id %}">Vote again?</a>
+<a href="{% url 'polls:polls' %}">Another poll?</a>
